# Abelo-LLM

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  HARDWARE_REQUIREMENTS.md  INSTRUCTIONS.md  README.md  ROADMAP.md  SESSION_MEMORY.md  docker-compose.yml  goal.txt  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml  deploy.yml
checkpoints/: metadata.json  tiny_transformer.pt  tokenizer.json
configs/: __init__.py  model_config.py
deploy/helm/my-custom-llm/: Chart.yaml  values.yaml
deploy/helm/my-custom-llm/templates/: _helpers.tpl  deployment.yaml  service.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  ollama-statefulset.yaml
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agent/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/components/: NavBar.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/eval/: page.tsx
frontend/src/app/hub/: page.tsx
frontend/src/app/knowledge-graph/: page.tsx
frontend/src/app/memory/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/app/models/manage/: page.tsx
frontend/src/app/playground/: page.tsx
frontend/src/app/rag/: page.tsx
frontend/src/app/redteam/: page.tsx
frontend/src/app/training/: page.tsx
frontend/src/app/workspaces/: page.tsx
plugins/: example_plugin.py
scripts/: download_data.py  finetune_lora.py  quantize.py  self_improve.py  train_pipeline.py
src/: cli.py  dataset.py  eval.py  inference.py  model.py  multimodal.py  tokenizer.py  train.py
src/agent/: __init__.py  browser.py  dag.py  planner.py  sub_agent.py
src/auth/: jwt.py
src/cache/: prompt_cache.py
src/cli/: chat.py  main.py
src/config/: __init__.py  settings.py
src/context/: __init__.py  manager.py
src/eval/: __init__.py  harness.py  judge.py  metrics.py  red_team.py
src/guard/: __init__.py  filter.py
src/ingestion/: pipeline.py
src/knowledge_graph/: graph.py
src/llm/: __init__.py  hub.py  local_model.py  ollama.py  provider_router.py  registry.py  router.py  semantic_cache.py  serving.py
src/mcp/: __init__.py  client.py
src/memory/: __init__.py  store.py
src/merge/: merger.py
src/monitor/: __init__.py  stats.py  tracing.py
src/multimodal/: __init__.py  audio.py  code.py  image.py  planner.py  text.py  video.py
src/plugins/: __init__.py  manager.py
src/rag/: __init__.py  agentic.py  embedder.py  loader.py  retriever.py  vector_store.py
src/server/: app.py
src/server/routes/: agent.py  auth.py  branching.py  chat.py  feedback.py  generate.py  memory.py  models.py  new_features.py  openai.py  plugins.py  rag.py  stats.py  structured.py  training.py  upload.py  voice.py  workspaces.py  ws.py
src/tools/: __init__.py  calculator.py  code_exec.py  file_io.py  image_analyze.py  memory_tools.py  rag_query_tool.py  registry.py  web_fetch.py  web_search.py
src/training/: __init__.py  data.py  distill.py  dpo.py  lora.py
src/vision/: analyzer.py
src/voice/: interface.py
tests/: test_agent.py  test_agentic_rag.py  test_auth.py  test_cache.py  test_dag.py  test_eval_judge.py  test_guard.py  test_hub.py  test_ingestion_pipeline.py  test_knowledge_graph.py  test_llm_router.py  test_memory_store.py  test_merge.py  test_multimodal.py  test_provider_router.py  test_red_team.py  test_semantic_cache.py  test_server_routes.py  test_serving.py  test_sub_agent.py  test_tokenizer_and_model.py  test_tools.py  test_tracing.py  test_training_dpo.py  test_vision.py  test_workspaces.py
