[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_custom_llm"
version = "1.0.0"
description = "Full-featured local LLM tool with multimodal generation"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Abelo Creative"},
]

[project.scripts]
llm = "src.cli.main:cli"
llm-server = "src.server.app:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 150
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
