[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_custom_llm"
version = "4.0.0"
description = "Full-featured local LLM with RAG, tool calling, memory, agent planning, guardrails, fine-tuning, vision, voice, knowledge graph, and plugins"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Abelo Creative"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.21.0",
    "aiofiles>=23.0.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.2.0",
    "build>=1.0.0",
    "pre-commit>=3.6.0",
]
mlx = ["mlx>=0.10.0", "mlx-lm>=0.10.0"]
unsloth = ["unsloth>=2024.0", "datasets>=2.14.0", "trl>=0.7.0", "accelerate>=0.25.0"]
torch = ["torch>=2.0.0", "safetensors>=0.4.0"]
voice = ["pyttsx3>=2.90", "edge-tts>=6.1.0"]
all = ["my_custom_llm[dev]", "my_custom_llm[mlx]", "my_custom_llm[unsloth]", "my_custom_llm[torch]", "my_custom_llm[voice]"]

[project.scripts]
llm = "src.cli.main:cli"
llm-server = "src.server.app:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 150
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]
